# Newsletter-pod

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  APP_STORE_CONNECT_SETUP.md  CLAUDE.md  Dockerfile  NEXT_STEPS.md  README.md  cloudbuild.yaml  codemagic.yaml  pyproject.toml  release_notes.txt  sources.yml  voices.yml
.claude/: settings.json
design-tokens/: README.md  build.js  package-lock.json  package.json  tokens.json
docs/: android-launch-checklist.md  android-strategy-assessment.md  flutter-migration-plan.md  flutter-run-polling-port-plan.md  flutter-ui-parity.md  ios-share-extension-setup.md  looker_studio_setup.md  phase2-followups.md
flutter/: analysis_options.yaml  pubspec.yaml
infra/: bigquery_setup.md  bigquery_views.sql  firestore_export_lifecycle.json
ios/: README.md  project.yml
newsletter_pod/: admin_metrics.py  analytics_export.py  app_store_verifier.py  audio_mastering.py  auth.py  blueprint.py  candidate_queue.py  card_summary.py  churn_risk.py  clustering.py  cohort_report.py  config.py  config_repository.py  control_plane.py  costing.py  embeddings.py  events.py  feed.py  feedback_digest.py  inbound.py  ingestion.py  interest_seeds.py  interest_vector.py  legal.py  mailer.py  main.py  models.py  pipeline.py  podcast_api.py  polymarket.py  prompting.py  push.py  ranker.py  regions.py  repository.py  retry_policy.py  shared_items.py  source_persistence.py  storage.py  substack.py  (+11 more)
scripts/: check_play_track.py  check_push_tokens.py  diarize.sh  generate_welcome_episode.py  grant_time_trial.py  grant_trial_gift_first_n.py  inspect_user_substack.py  manage_promo_codes.py  merge_accounts.py  migrate_demi_dreams_voice_id.py  migrate_vinnie_chase_voice_id.py  post_deploy_smoke.sh  probe_substack_subscribe.py  render_voice_samples.py  reset_onboarding_state.py  reset_tier_caps.py  reset_user.py  sanitize_episode_links.py  schedule_analytics_jobs.sh  schedule_broadcast_loop.sh  schedule_cold_start_refresh.sh  schedule_reap_stale_runs.sh  send_test_ios_push.py  set_prices.py  setup_scheduler.ps1  snapshot_weekly_changes.py  transcribe.sh  validate_candidate_podcasts.py  validate_candidate_sources.py  validate_candidate_sources_climate.py  validate_candidate_sources_cybersecurity.py  validate_candidate_sources_family.py  validate_candidate_sources_food_beverage.py  validate_candidate_sources_round2.py  validate_candidate_sources_space_fitness.py  vince_generation_telemetry.py
tests/: conftest.py  test_admin_metrics.py  test_analytics_export.py  test_audio_mastering.py  test_auth_account_linking.py  test_auth_and_feed.py  test_auth_identity.py  test_blueprint.py  test_blueprint_preview_endpoint.py  test_blueprint_prompting.py  test_broadcast_feed.py  test_broadcast_framing.py  test_broadcast_loop_endpoints.py  test_broadcast_prompting.py  test_broadcast_publisher.py  test_broadcast_repository.py  test_broadcast_runner.py  test_broadcast_service.py  test_broadcast_topic_picker.py  test_broadcast_x_client.py  test_candidate_queue.py  test_card_summary.py  test_churn_risk.py  test_clustering.py  test_cohort_report.py  test_config.py  test_config_repository.py  test_control_plane_api.py  test_delint.py  test_embeddings.py  test_events.py  test_generate_user_endpoint.py  test_inbound.py  test_main.py  (+30 more)
(+115 files in other folders)
