[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsletter-pod"
version = "0.1.0"
description = "Private Apple Podcasts daily digest from RSS newsletters"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "PyJWT[crypto]>=2.9.0",
  # httpx with the http2 extra: APNs (api.push.apple.com) is HTTP/2 only.
  "httpx[http2]>=0.28.0",
  "feedparser>=6.0.11",
  "requests>=2.32.0",
  "PyYAML>=6.0.1",
  "python-dateutil>=2.9.0",
  "tzdata>=2024.1",
  "google-cloud-firestore>=2.17.0",
  "google-cloud-storage>=2.17.0",
  "google-cloud-secret-manager>=2.20.0",
  "google-cloud-tasks>=2.16.0",
  # Daily Firestore->BigQuery snapshot export (analytics_export.py) that backs
  # the subscription/tier/churn views. Imported lazily so unit tests never need it.
  "google-cloud-bigquery>=3.20.0",
  "app-store-server-library>=1.7.0",
  # Share-to-ClawCast: extract text from files users upload via the iOS
  # Share extension. All three are pure-Python (or near-pure) and stable.
  "pypdf>=4.0",
  "ebooklib>=0.18",
  "python-docx>=1.1",
  # Broadcast loop: post generated podcasts to X (Twitter). Tweepy wraps
  # the v1.1 chunked media-upload flow (needed for video) and the v2
  # tweet-create endpoint behind a single OAuth 1.0a session.
  "tweepy>=4.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.28.0",
  # reportlab is used only by tests/test_shared_items.py to mint a one-page
  # PDF fixture; runtime PDF reads use pypdf.
  "reportlab>=4.0",
]
# Optional. Install with `pip install -e .[browser]` then run
# `playwright install chromium`. Used only by scripts/looker/, kept out
# of the default dev set so CI doesn't pull a ~150MB Chromium it never
# needs.
browser = [
  "playwright>=1.47.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["newsletter_pod*"]

[tool.setuptools.package-data]
# Ship Apple's root CA so the App Store Server Notification verifier
# has a trust anchor without depending on the system trust store.
newsletter_pod = ["data/*.cer"]
